3 files modified, 11 added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<hello name="{{ name }}"></hello>
-<p>
-  Start editing to see some magic happen :)
-</p>
+<h1>Atividade 01/04/2022</h1>
+<hr>
+<a [routerLink]="['']">Home</a>
+<a [routerLink]="['subjects']">Subjects</a>
+<a [routerLink]="['timer']">Timer</a>
+<router-outlet></router-outlet>
