--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <h1>Atividade 01/04/2022</h1>
 <hr>
 <a [routerLink]="['']">Home</a>
-<a [routerLink]="['subjects']">Subjects</a>
-<a [routerLink]="['timer']">Timer</a>
+<a [routerLink]="['/subjects']">Subjects</a>
+<a [routerLink]="['/timer']">Timer</a>
 <router-outlet></router-outlet>
